Se agrega titulo

--- a/portafolio.html
+++ b/portafolio.html
@@ -7,6 +7,9 @@
     <title>Portafolio AI</title>
 </head>
 <body>
+
+    <h1>Portfolio de AI</h1>
+    <p>Estos son los proyectos de desarrollo de software</p>
     
 </body>
 </html>
