--- a/portafolio.html
+++ b/portafolio.html
@@ -11,7 +11,7 @@
 
     <header class="header">
         <h1>Portfolio de AI UNAM</h1>
-        <p>Estos son los proyectos de desarrollo de software</p>        
+        <p>Estos son los proyectos de desarrollo de software de Auditoria</p>        
         <p>Este es el equipo de basquet</p>
     </header>
 
