Se incorpora etiqueta de parrafo

--- a/portafolio.html
+++ b/portafolio.html
@@ -12,7 +12,7 @@
     <header class="header">
         <h1>Portfolio de AI UNAM</h1>
         <p>Estos son los proyectos de desarrollo de software de Auditoria</p>        
-        <p>Este es el equipo de basquet</p>
+        <p>Este es el equipo de la ofi 2019-2020</p>
     </header>
 
 
