Se agrega imagen

--- a/portafolio.html
+++ b/portafolio.html
@@ -15,7 +15,7 @@
         <p>Este es el equipo de la ofi 2019-2020.</p>
         <p>Portafolio UNAM Diciembre</p>
     </header>
-
+    <img src="img/source.gif" alt="penauts">
 
 
 </body>
