Se agregó footer

--- a/portafolio.html
+++ b/portafolio.html
@@ -15,6 +15,9 @@
         <p>Este es el equipo de la ofi 2019-2020.</p>
         <p>Portafolio UNAM Diciembre</p>
     </header>
+    <footer>
+        Hecho por ❤️ por la ofi
+    </footer>
     <img src="img/source.gif" alt="penauts">
 
 
